# scival_search

./: .env  .env.example  .gitignore  README.md  pyproject.toml  scival_search.ipynb  scival_topic_retrieval.ipynb  utils.py
dev/: data_retrieval.ipynb  lookups.csv  related_papers_retrieval.ipynb  related_topics_retrieval.ipynb  scival_search.ipynb  scival_topic_retrieval.ipynb
scival_search/: __init__.py  related_papers.py  related_topics.py  utils.py
