[project]
name = "scival-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Nils Herrmann",email = "nils_herrmann@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pybliometrics @ git+https://github.com/pybliometrics-dev/pybliometrics.git",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.30.1"

